# MNN_Demo

./: README.md
android_MNN_Demo/: .gitignore  build.gradle  settings.gradle
android_MNN_Demo/app/: build.gradle
android_MNN_Demo/app/src/androidTest/java/com/wzt/mnn/: ExampleInstrumentedTest.java
android_MNN_Demo/app/src/main/: AndroidManifest.xml
android_MNN_Demo/app/src/main/cpp/: CMakeLists.txt  NanoDet.cpp  NanoDet.h  jni_interface.cpp
android_MNN_Demo/app/src/main/java/com/wzt/mnn/activity/: MainActivity.java  WelcomeActivity.java
android_MNN_Demo/app/src/main/java/com/wzt/mnn/model/: BoxInfo.java  NanoDet.java
android_MNN_Demo/app/src/main/res/drawable/: cpu_gpu_bg.xml
android_MNN_Demo/app/src/main/res/layout/: activity_main.xml  activity_welcome.xml
android_MNN_Demo/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android_MNN_Demo/app/src/main/res/values-night/: themes.xml
android_MNN_Demo/app/src/test/java/com/wzt/mnn/: ExampleUnitTest.java
android_MNN_Demo/gradle/wrapper/: gradle-wrapper.properties
iOS_MNN_Demo/MNNDemo/: AppDelegate.h  AppDelegate.m  NanoDet.h  NanoDet.mm  UIImage+Utility.h  ViewController.h  ViewController.mm  WelcomeVC.h  WelcomeVC.m  main.m
iOS_MNN_Demo/MNNDemo.xcodeproj/: project.pbxproj
iOS_MNN_Demo/MNNDemo/Assets.xcassets/mnn_icon.imageset/: Contents.json
iOS_MNN_Demo/MNNDemo/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
iOS_MNN_Demo/MNNDemo/MNN.framework/: Info.plist
iOS_MNN_Demo/MNNDemo/MNN.framework/_CodeSignature/: CodeDirectory  CodeRequirements  CodeRequirements-1  CodeResources  CodeSignature
iOS_MNN_Demo/MNNDemo/res/: nanodet_320.mnn
